--- a/package.json
+++ b/package.json
@@ -16,8 +16,44 @@
       {
         "command": "ip-lookup.lookupIPs",
         "title": "IP Lookup: Lookup IPs"
+      },
+      {
+        "command": "log-analyzer.analyzeRequests",
+        "title": "Log Analyzer: Analyze Request Patterns"
+      },
+      {
+        "command": "log-analyzer.analyzeIPs",
+        "title": "Log Analyzer: Analyze IP Addresses"
       }
-    ]
+    ],
+    "configuration": {
+      "title": "Log Analyzer",
+      "properties": {
+        "logAnalyzer.timeInterval": {
+          "type": "string",
+          "default": "1h",
+          "enum": [
+            "15m",
+            "30m",
+            "1h",
+            "2h",
+            "4h",
+            "1d"
+          ],
+          "description": "Time interval for request analysis"
+        },
+        "logAnalyzer.spikeThreshold": {
+          "type": "number",
+          "default": 2,
+          "description": "Threshold for spike detection (standard deviations)"
+        },
+        "logAnalyzer.timestampFormat": {
+          "type": "string",
+          "default": "ISO8601",
+          "description": "Timestamp format in log files"
+        }
+      }
+    }
   },
   "scripts": {
     "vscode:prepublish": "npm run compile",
